--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,30 +1,13 @@
-name: alpenhorn-chime-ci
+name: test-chimedb.data_index
 on:
   pull_request:
     branches:
-    - main
+    - master
   push:
     branches:
-    - main
+    - master
 
 jobs:
-  linting:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v1
-        with:
-          python-version: "3.11"
-
-      - name: Install black
-        run: |
-          pip install black
-
-      - name: Check code with black
-        run: black --check .
-
   run-tests:
     strategy:
       matrix:
