--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,7 +11,7 @@ jobs:
   run-tests:
     strategy:
       matrix:
-        python-version: ["3.10", "3.11"]
+        python-version: ["3.7", "3.11"]
 
     runs-on: ubuntu-latest
     steps:
@@ -25,7 +25,7 @@ jobs:
     - name: Install pip dependencies
       run: |
         pip install .
-        pip install .[test]
+        pip install "pytest >= 7.0"
 
     - name: Run tests
       run: pytest -sv test/
