build: use setuptools-git-versioning for versioning
The versioneer file here was never updated for 3.12.  Instead of
doing that now, I think setuptools-git-versioning will be a
better way of doing it, since there's no in-repo code to fall
out of date anymore.

I've used setuptools-git-versioning already in other things (see
`alpenhorn-chime`) and it seems like less of a burden than versioneer
has been.

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,7 +11,7 @@ jobs:
   run-tests:
     strategy:
       matrix:
-        python-version: ["3.7", "3.11"]
+        python-version: ["3.8", "3.12"]
 
     runs-on: ubuntu-latest
     steps:
@@ -25,7 +25,7 @@ jobs:
     - name: Install pip dependencies
       run: |
         pip install .
-        pip install "pytest >= 7.0"
+        pip install .[test]
 
     - name: Run tests
       run: pytest -sv test/
