--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 requires = ["setuptools>=61.0.0", "wheel", "setuptools-git-versioning"]
-build-backed = "setuptools.build_meta"
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "chimedb.data_index"
