--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
   {name = "D. V. Wiebe for the CHIME Collaboration", email = "dvw@phas.ubc.ca"}
 ]
 description = "CHIME data index (alpenhorn) ORM"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 dynamic = ["readme", "version"]
 license = {file = "LICENSE"}
 dependencies = [
@@ -27,3 +27,6 @@ readme = {file = ["README.md"], content-type = "text/markdown"}
 
 [tool.setuptools-git-versioning]
 enabled = true
+
+[tool.ruff]
+target-version = "py310"
